--- a/haskell/vsat.cabal
+++ b/haskell/vsat.cabal
@@ -5,18 +5,21 @@ version:             0.1.0.0
 homepage:            https://github.com/githubuser/vsat#readme
 license:             BSD3
 license-file:        LICENSE
-author:              Author name here
-maintainer:          example@example.com
-copyright:           2017 Author name here
-category:            Web
+author:              Jeffrey Young
+maintainer:          youngjef@oregonstate.edu
+copyright:           2017 Jeffrey Young
+category:            Experimental
 build-type:          Simple
 extra-source-files:  README.md
 cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Lib
+  exposed-modules:     
   build-depends:       base >= 4.7 && < 5
+                     , containers >= 0.5
+                     , mtl
+
   default-language:    Haskell2010
 
 executable vsat-exe
