--- a/haskell/vsat.cabal
+++ b/haskell/vsat.cabal
@@ -16,6 +16,7 @@ cabal-version:       >=1.10
 library
   hs-source-dirs:      src
   exposed-modules:     
+  extensions:          NamedFieldPuns
   build-depends:       base >= 4.7 && < 5
                      , containers >= 0.5
                      , mtl
