--- a/haskell/vsat.cabal
+++ b/haskell/vsat.cabal
@@ -17,9 +17,14 @@ library
   hs-source-dirs:      src
   exposed-modules:     
   extensions:          NamedFieldPuns
+                       , OverloadedStrings
+
   build-depends:       base >= 4.7 && < 5
                      , containers >= 0.5
                      , mtl
+                     , turtle >= 1.3
+                     , text 
+                     , unix
 
   default-language:    Haskell2010
 
