--- a/haskell/vsat.cabal
+++ b/haskell/vsat.cabal
@@ -18,6 +18,7 @@ library
   exposed-modules:     
   extensions:          NamedFieldPuns
                        , OverloadedStrings
+                       , DeriveAnyClass
 
   build-depends:       base >= 4.7 && < 5
                      , containers >= 0.5
