--- a/haskell/vsat.cabal
+++ b/haskell/vsat.cabal
@@ -32,7 +32,7 @@ library
 executable vsat-exe
   hs-source-dirs:      app
   main-is:             Main.hs
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
   build-depends:       base
                      , vsat
   default-language:    Haskell2010
