Adding foldl method based on turtle tutorial

--- a/haskell/vsat.cabal
+++ b/haskell/vsat.cabal
@@ -26,6 +26,7 @@ library
                      , turtle >= 1.3
                      , text 
                      , unix
+                     , foldl
 
   default-language:    Haskell2010
 
