--- a/haskell/vsat.cabal
+++ b/haskell/vsat.cabal
@@ -19,6 +19,7 @@ library
   extensions:          NamedFieldPuns
                        , OverloadedStrings
                        , DeriveAnyClass
+                       , UndecidableInstances
 
   build-depends:       base >= 4.7 && < 5
                      , containers >= 0.5
