--- a/haskell/vsat.cabal
+++ b/haskell/vsat.cabal
@@ -20,6 +20,7 @@ library
                        , OverloadedStrings
                        , DeriveAnyClass
                        , UndecidableInstances
+                       , FlexibleContexts
 
   build-depends:       base >= 4.7 && < 5
                      , containers >= 0.5
