--- a/haskell/vsat.cabal
+++ b/haskell/vsat.cabal
@@ -29,6 +29,7 @@ library
                      , text 
                      , unix
                      , foldl
+                     , hashable >= 1.2
 
   default-language:    Haskell2010
 
