--- a/haskell/vsat.cabal
+++ b/haskell/vsat.cabal
@@ -15,18 +15,18 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     
+  exposed-modules:
   extensions:          NamedFieldPuns
                        , OverloadedStrings
-                       , DeriveAnyClass
                        , UndecidableInstances
                        , FlexibleContexts
+                       , DeriveFunctor
 
   build-depends:       base >= 4.7 && < 5
                      , containers >= 0.5
                      , mtl
                      , turtle >= 1.3
-                     , text 
+                     , text
                      , unix
                      , foldl
                      , hashable >= 1.2
