--- a/haskell/vsat.cabal
+++ b/haskell/vsat.cabal
@@ -21,6 +21,7 @@ library
                        , UndecidableInstances
                        , FlexibleContexts
                        , DeriveFunctor
+                       , GeneralizedNewtypeDeriving
 
   build-depends:       base >= 4.7 && < 5
                      , containers >= 0.5
@@ -30,6 +31,7 @@ library
                      , unix
                      , foldl
                      , hashable >= 1.2
+                     , criterion
 
   default-language:    Haskell2010
 
