--- a/haskell/vsat.cabal
+++ b/haskell/vsat.cabal
@@ -15,13 +15,14 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:
-  extensions:          NamedFieldPuns
-                       , OverloadedStrings
-                       , UndecidableInstances
-                       , FlexibleContexts
-                       , DeriveFunctor
-                       , GeneralizedNewtypeDeriving
+
+  exposed-modules:     SubProcess, CNF, Prop, TagTree, Utils
+  default-extensions:          NamedFieldPuns
+                             , OverloadedStrings
+                             , UndecidableInstances
+                             , FlexibleContexts
+                             , DeriveFunctor
+                             , GeneralizedNewtypeDeriving
 
   build-depends:       base >= 4.7 && < 5
                      , containers >= 0.5
@@ -31,16 +32,16 @@ library
                      , unix
                      , foldl
                      , hashable >= 1.2
-                     , criterion
 
   default-language:    Haskell2010
 
-executable vsat-exe
+executable vsat
   hs-source-dirs:      app
   main-is:             Main.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
   build-depends:       base
                      , vsat
+                     , criterion
   default-language:    Haskell2010
 
 test-suite vsat-test
