--- a/haskell/vsat.cabal
+++ b/haskell/vsat.cabal
@@ -32,6 +32,7 @@ library
                      , unix
                      , foldl
                      , hashable >= 1.2
+                     , bifunctors
 
   default-language:    Haskell2010
 
