--- a/haskell/vsat.cabal
+++ b/haskell/vsat.cabal
@@ -21,6 +21,7 @@ library
                              , FlexibleContexts
                              , DeriveFunctor
                              , DeriveGeneric
+                             , BangPatterns
 
   build-depends:       base >= 4.7 && < 5
                      , containers >= 0.5
@@ -32,14 +33,14 @@ library
                      , hashable >= 1.2
                      , bifunctors
                      , QuickCheck
-                     , generic-random
+                     , deepseq
 
   default-language:    Haskell2010
 
 executable vsat
   hs-source-dirs:      app
   main-is:             Main.hs
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
+  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N -Wall
   build-depends:       base
                      , vsat
                      , criterion
