--- a/haskell/vsat.cabal
+++ b/haskell/vsat.cabal
@@ -35,6 +35,7 @@ library
                      , bifunctors
                      , QuickCheck
                      , deepseq
+                     , pipes
 
   default-language:    Haskell2010
 
@@ -45,6 +46,16 @@ executable vsat
   build-depends:       base
                      , vsat
                      , criterion
+  default-language:    Haskell2010
+
+benchmark baselines
+  type:                exitcode-stdio-1.0
+  hs-source-dirs:      bench
+  main-is:             Baselines.hs
+  build-depends:       base
+                     , vsat
+                     , criterion
+  ghc-options:         -O2 -threaded
   default-language:    Haskell2010
 
 test-suite vsat-test
