--- a/haskell/vsat.cabal
+++ b/haskell/vsat.cabal
@@ -23,6 +23,7 @@ library
                              , DeriveGeneric
                              , BangPatterns
                              , GeneralizedNewtypeDeriving
+                             , FlexibleInstances
 
   build-depends:       base >= 4.7 && < 5
                      , containers >= 0.5
