--- a/haskell/vsat.cabal
+++ b/haskell/vsat.cabal
@@ -43,7 +43,7 @@ library
 executable vsat
   hs-source-dirs:      app
   main-is:             Main.hs
-  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N -Wall
+  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-orphans
   build-depends:       base
                      , vsat
                      , criterion
