--- a/haskell/vsat.cabal
+++ b/haskell/vsat.cabal
@@ -25,6 +25,7 @@ library
                              , GeneralizedNewtypeDeriving
                              , FlexibleInstances
                              , DeriveDataTypeable
+                             , UnicodeSyntax
 
   build-depends:       base >= 4.7 && < 5
                      , containers >= 0.5
