run is refactored, we have anddecomp working and brute force for free

--- a/haskell/vsat.cabal
+++ b/haskell/vsat.cabal
@@ -15,7 +15,7 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     SubProcess, CNF, VProp, TagTree, Utils, Run, Gen
+  exposed-modules:     VProp, Utils, Run, Sat
   default-extensions:          NamedFieldPuns
                              , OverloadedStrings
                              , FlexibleContexts
