--- a/haskell/vsat.cabal
+++ b/haskell/vsat.cabal
@@ -15,7 +15,7 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     VProp, Utils, Run, Sat
+  exposed-modules:     VProp, Utils, Run, SAT
   default-extensions:          NamedFieldPuns
                              , OverloadedStrings
                              , FlexibleContexts
@@ -57,7 +57,7 @@ benchmark baselines
   build-depends:       base
                      , vsat
                      , criterion
-  ghc-options:         -O2 -threaded
+  ghc-options:         -O2 -threaded -fno-full-laziness
   default-language:    Haskell2010
 
 test-suite vsat-test
