--- a/haskell/vsat.cabal
+++ b/haskell/vsat.cabal
@@ -15,7 +15,7 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     VProp, Utils, Run, SAT
+  exposed-modules:     VProp, Utils, Run, SAT, V
   default-extensions:          NamedFieldPuns
                              , OverloadedStrings
                              , FlexibleContexts
