--- a/haskell/vsat.cabal
+++ b/haskell/vsat.cabal
@@ -30,9 +30,6 @@ library
   build-depends:       base >= 4.7 && < 5
                      , containers >= 0.5
                      , mtl
-                     , turtle >= 1.3
-                     , text
-                     , unix
                      , foldl
                      , bifunctors
                      , QuickCheck
@@ -57,6 +54,7 @@ benchmark baselines
   build-depends:       base
                      , vsat
                      , criterion
+                     , QuickCheck
   ghc-options:         -O2 -threaded -fno-full-laziness
   default-language:    Haskell2010
 
