abstracting vprop data type

--- a/haskell/package.yaml
+++ b/haskell/package.yaml
@@ -37,6 +37,7 @@ default-extensions:
   - FlexibleContexts
   - DeriveFunctor
   - DeriveGeneric
+  - DeriveTraversable
   - BangPatterns
   - GeneralizedNewtypeDeriving
   - FlexibleInstances
