sneaky non-evaluation bug fix

--- a/haskell/package.yaml
+++ b/haskell/package.yaml
@@ -59,7 +59,9 @@ executables:
 benchmarks:
   vsat-bench:
     main:                Baselines.hs
-    source-dirs:         bench, src
+    source-dirs:
+      - bench
+      - src
     ghc-options:
     - -O2
     - -threaded
