writing out to a csv, not done yet

--- a/haskell/package.yaml
+++ b/haskell/package.yaml
@@ -26,6 +26,12 @@ dependencies:
 - bifunctors
 - QuickCheck
 - deepseq
+- sbv
+- cassava
+- bytestring
+- criterion
+- text
+- vector
 
 library:
   source-dirs: src
