--- a/haskell/vsat.cabal
+++ b/haskell/vsat.cabal
@@ -2,7 +2,7 @@
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 4073341a69e010a144551f88356044b132dbf334dad2c944ab9443aa7ebb559f
+-- hash: 335a9b6d9e5264e5b31f537990336b4b820563cb2c44b7805567b28c52cbb0dc
 
 name:           vsat
 version:        0.1.0.0
@@ -26,6 +26,7 @@ source-repository head
 
 library
   exposed-modules:
+      Report
       Run
       SAT
       Utils
@@ -40,11 +41,16 @@ library
       QuickCheck
     , base >=4.7 && <5
     , bifunctors
+    , bytestring
+    , cassava
     , containers >=0.5
+    , criterion
     , deepseq
     , foldl
     , mtl
     , sbv
+    , text
+    , vector
   default-language: Haskell2010
 
 executable vsat
@@ -59,11 +65,16 @@ executable vsat
       QuickCheck
     , base >=4.7 && <5
     , bifunctors
+    , bytestring
+    , cassava
     , containers >=0.5
+    , criterion
     , deepseq
     , foldl
     , mtl
     , sbv
+    , text
+    , vector
     , vsat
   default-language: Haskell2010
 
@@ -81,11 +92,16 @@ test-suite vsat-test
       QuickCheck
     , base >=4.7 && <5
     , bifunctors
+    , bytestring
+    , cassava
     , containers >=0.5
+    , criterion
     , deepseq
     , foldl
     , mtl
     , sbv
+    , text
+    , vector
     , vsat
   default-language: Haskell2010
 
@@ -93,6 +109,7 @@ benchmark vsat-bench
   type: exitcode-stdio-1.0
   main-is: Baselines.hs
   other-modules:
+      Report
       Run
       SAT
       Utils
@@ -108,10 +125,14 @@ benchmark vsat-bench
       QuickCheck
     , base >=4.7 && <5
     , bifunctors
+    , bytestring
+    , cassava
     , containers >=0.5
     , criterion
     , deepseq
     , foldl
     , mtl
     , sbv
+    , text
+    , vector
   default-language: Haskell2010
