--- a/haskell/vsat.cabal
+++ b/haskell/vsat.cabal
@@ -2,7 +2,7 @@
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 101019861e88b49f36eb5b15812738c1cb2afd3ee9da4a87b87322d7f3f50bdc
+-- hash: 2f2605e61ff4019f1ec4948b5cc90db09e4c8d945344200c277890e470bd10a8
 
 name:           vsat
 version:        0.1.0.0
@@ -48,6 +48,7 @@ library
     , mtl
     , sbv
     , text
+    , time
     , vector
   default-language: Haskell2010
 
@@ -72,6 +73,7 @@ executable vsat
     , mtl
     , sbv
     , text
+    , time
     , vector
     , vsat
   default-language: Haskell2010
@@ -99,6 +101,7 @@ test-suite vsat-test
     , mtl
     , sbv
     , text
+    , time
     , vector
     , vsat
   default-language: Haskell2010
@@ -131,5 +134,6 @@ benchmark vsat-bench
     , mtl
     , sbv
     , text
+    , time
     , vector
   default-language: Haskell2010
