--- a/haskell/stack.yaml
+++ b/haskell/stack.yaml
@@ -3,7 +3,7 @@ packages:
 # system-ghc: false
 extra-deps: []
 
-resolver: lts-10.10
+resolver: lts-11.14
 build:
-  library-profiling: true
-  executable-profiling: true
+  library-profiling: false
+  executable-profiling: false
