--- a/haskell/package.yaml
+++ b/haskell/package.yaml
@@ -48,6 +48,7 @@ default-extensions:
   - DeriveTraversable
   - FlexibleInstances
   - DeriveDataTypeable
+  - MultiParamTypeClasses
 
 executables:
   vsat:
