adding more tests, need Eq on SMTResult for Monadic tests

--- a/haskell/package.yaml
+++ b/haskell/package.yaml
@@ -88,6 +88,7 @@ tests:
     - -with-rtsopts=-N
     dependencies:
     - vsat
+    - QuickCheck
     - tasty
     - tasty-hunit
     - tasty-smallcheck
