adding spock, eq instances for SBV internal types

--- a/haskell/package.yaml
+++ b/haskell/package.yaml
@@ -34,6 +34,7 @@ dependencies:
 - time
 - tasty-quickcheck
 - aeson
+- Spock
 
 library:
   source-dirs: src
@@ -50,6 +51,7 @@ default-extensions:
   - FlexibleInstances
   - DeriveDataTypeable
   - MultiParamTypeClasses
+  - RecordWildCards
 
 executables:
   vsat:
