--- a/haskell/stack.yaml
+++ b/haskell/stack.yaml
@@ -3,10 +3,11 @@ packages:
 # system-ghc: false
 extra-deps: []
 
-nix:
-  enable: true
-  pure: false
-  packages: [ z3, pkgconfig ]
+## uncomment the following lines to tell stack you are in a nix environment
+# nix:
+  # enable: true
+  # pure: false
+  # packages: [ z3, pkgconfig ]
 
 resolver: lts-11.14
 build:
