--- a/haskell/package.yaml
+++ b/haskell/package.yaml
@@ -6,9 +6,6 @@ author:              "Jeffrey Young"
 maintainer:          "youngjef@oregonstate.edu"
 copyright:           "2018 Jeffrey Young"
 
-extra-source-files:
-- README.md
-
 # Metadata used when publishing your package
 # synopsis:            Short description of your package
 # category:            Web
@@ -16,7 +13,7 @@ extra-source-files:
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
-description:         Please see the README on Github at <https://github.com/githubuser/my-app#readme>
+description:         Please see the README on Github at https://github.com/doyougnu/VSat
 
 dependencies:
 - base >= 4.7 && < 5
