--- a/haskell/package.yaml
+++ b/haskell/package.yaml
@@ -21,7 +21,7 @@ dependencies:
 - mtl
 # - bifunctors
 - deepseq
-# - genifunctors
+- genifunctors >= 0.4
 # sbv forces us to use LTS-11.22 ghc 8.2.2
 - sbv
 - cassava
