--- a/haskell/package.yaml
+++ b/haskell/package.yaml
@@ -93,6 +93,10 @@ benchmarks:
     - -threaded
     - -rtsopts
     - -with-rtsopts=-N
+    - -auto-all
+    dependencies:
+    - criterion
+    - vsat
 
 tests:
   vsat-test:
